Manifests/stage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: speedserver
    version : v2
  name: speedserver-v2
  namespace: eks-stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: speedserver
      version: v2
  strategy: {}
  template:
    metadata:
      labels:
        app: speedserver
        version : v2
    spec:
      containers:
      - image: lalx/speedtest-server:v2
        name: speedserver
        resources: {}
status: {}
