Manifests/stage/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedserver
  name: speedserver-svc
  namespace: eks-stage
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http-port
  selector:
    app: speedserver
  type: ClusterIP
