Manifests/stage/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stage-gw 
  namespace: eks-stage
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80 
      name: stage-service-port
      protocol: HTTP
    hosts:
    - stage.alexakis.org
