Manifests/stage/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: speedserver-vs
  namespace: eks-stage
spec:
  hosts:
  - stage.alexakis.org
  gateways:
  - stage-gw
  http:
  - route:
    - destination:
        host: speedserver-svc.eks-stage.svc.cluster.local
        subset: stage
      weight: 100
